--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      name="description"
+      content="Personal Project to learn how to use APIs"
+    />
+    <meta
+      name="keywords"
+      content="HTML, CSS, JavaScript, React, Styled-Components, API"
+    />
+    <meta name="author" content="Emil Kovacevic" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lord Of The Rings</title>
   </head>
   <body>
     <div id="root"></div>
